--- a/main.html
+++ b/main.html
@@ -20,11 +20,11 @@
 		<div class="grid-item" id="9">9</div>
 	</div>
 
-	<input id="block-id" type="text" />
-	<input id="color-id" type="text" />
+	<input id="block_id" type="text" />
+	<input id="color_id" type="text" />
 
 	<button id="change_button">Change</button>
-	<button id="Reset">Reset</button>
+	<button id="reset_button">Reset</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
