--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<input id="block_id" type="text" />
-	<input id="color_id" type="text" />
+	<input id="colour_id" type="text" />
 
 	<button id="change_button">Change</button>
 	<button id="reset_button">Reset</button>
